@@ -1,3 +1,7 @@
+2022-06-18  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/mutex.h: Added
+
 2022-06-17  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Added package "alloc"
